<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OmAppen">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="18dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konto"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="21dp"
        android:background="@color/colorButton"
        android:textColor="@color/colorText"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sokefelt"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:layout_editor_absoluteX="21dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="327dp"
        android:layout_marginTop="72dp"
        android:text="@string/om_appen"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:layout_editor_absoluteX="23dp" />
</androidx.constraintlayout.widget.ConstraintLayout>